[package]
name = "tasbot-display"
version = "0.1.0"
edition = "2018"

[profile.release]
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
log = "0.4.14"
rppal = "0.12.0"
structopt = "0.3.22"
thiserror = "1.0.28"

[features]
dont-cap-brightness = []
